@@ -1,4 +1,5 @@
 5.0a4 -> 5.0b1:
+    - rpm.org: Move RPMFILE_* file attributes to rpmfi.h.
     - rpm.org: Move file action enums to rpmfi where they logically belong.
     - rpm.org: Move rpmprobFilterFlag enums to rpmps where they logically belong
     - rpm.org: Move rpmtransFlags enums to rpmts.h where it logically belongs.
